<resources>
    <string name="app_name">MsgShareApp</string>
    <string name="Btn_Show_Toast">Show Toast</string>
    <string name="txt_type_here">Type here...</string>
    <string name="btn_next_page">Pass To Next Page</string>
    <string name="btn_share_msg">SHARE MESSAGE</string>
    <string name="btn_recycler">Recycler View &amp; Card View</string>
    <string name="lbl_button_clicked">Button clicked successfully</string>
</resources>
